--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack"  },
+    "build": "webpack"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kpk6k/bwd-labs.git"
@@ -23,7 +24,9 @@
     "webpack-dev-server": "^5.2.0"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0"
   }
